fixed the alignment of the descriptions under the mini images so that they are centered

--- a/style.css
+++ b/style.css
@@ -107,6 +107,8 @@ body {
 .tinyimg {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .img {
